Potential fix for placeholder input text cut off on mobile

--- a/app/assets/stylesheets/edit.scss
+++ b/app/assets/stylesheets/edit.scss
@@ -56,8 +56,13 @@
     width: 100%;
 
     > input {
+      line-height: 1;
       padding: 0.7rem;
       font-size: max(1rem, 16px);
+
+      &::placeholder{
+        overflow: visible;
+      }
     }
 
     > input, button[type="submit"] {
